ui/scss/component/_channel.scss
$cover-z-index: 0;
$metadata-z-index: 1;
$actions-z-index: 2;

.channelPage-wrapper {
  .button-group {
    .button__content {
      .icon {
        stroke: var(--color-text);
      }
    }
  }

  .mb-xl {
    // Temporary fix for upcoming livestreams on channel page
    margin-bottom: 0px;
    background: rgba(var(--color-primary-dynamic), 0.1);
    border-radius: var(--border-radius);
    padding: var(--spacing-m);

    .section__header--actions {
      margin-top: 0px !important;
      padding-top: 0px !important;
    }

    .claim-preview--tile {
      margin-bottom: 0px;
    }

    .claim-tile__title {
      margin-bottom: 0px;
      min-height: unset;
    }

    .claim-tile__info {
      padding-bottom: var(--spacing-s);
    }
  }
}
.channel-cover {
  position: relative;
  background-image: linear-gradient(to right, #637ad2, #318794 80%);
  display: flex;
  align-items: flex-end;
  box-sizing: content-box;
  color: #fff;
}

.channel-cover__custom {
  z-index: $cover-z-index;
  align-self: flex-start;
  position: absolute;
  object-fit: cover;
}

.channel-cover,
.channel-cover__custom {
  min-height: var(--cover-photo-height);
  height: 100%;
  width: 100%;
  border-top-left-radius: var(--card-radius);
  border-top-right-radius: var(--card-radius);
  border: 1px sold var(--color-border);
  border-bottom: none;

  @media (max-width: $breakpoint-small) {
    // Yikes
    // I, Sean Yesmunt, take full responsibility for this monster
    min-height: calc(var(--cover-photo-height) + 2 * var(--spacing-xl) + var(--spacing-m));
  }

  .menu__button {
    opacity: 1;
    justify-content: center;
  }
}

.channel-cover__custom--waiting {
  background-color: var(--color-gray-5);
  width: 100%;
  height: 100%;
  position: absolute;
  p {
    padding: var(--padding-m);
  }
}

.channel-cover__gradient {
  width: 100%;
  height: 100%;
  position: absolute;

  &:after {
    position: absolute;
    bottom: 0;
    opacity: 1;
    content: '';
    height: 100%;
    left: 0;
    right: 0;
    width: 100%;
    background: linear-gradient(0deg, #0d0d0d 0, transparent 65%);
  }
}

.channel-thumbnail {
  display: flex;
  position: relative;
  height: 5rem;
  width: 5rem;
  background-size: cover;
  margin-right: var(--spacing-m);
}

.channel-thumbnail--resolving {
  background-color: var(--color-gray-3);
}

.channel-thumbnail--small {
  height: 3rem;
  width: 3rem;
}

.channel-thumbnail--xsmall {
  height: 2.1rem;
  width: 2.1rem;
  margin-right: var(--spacing-xs);
}

.channel-thumbnail--waiting {
  background-color: var(--color-gray-5);
  border-radius: var(--border-radius);
  padding-top: 4rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.channel__thumbnail--channel-page {
  position: absolute;
  height: var(--channel-thumbnail-width);
  width: var(--channel-thumbnail-width);
  left: var(--spacing-m);
  top: 4rem;
  margin-top: var(--spacing-l);
  box-shadow: var(--card-box-shadow);

  @media (max-width: $breakpoint-small) {
    top: 0;
    margin-top: var(--spacing-xl);
  }
}

.channel-thumbnail__custom {
  width: 100%;
  object-fit: cover;
  font-size: 1px; // To hide the alt text on firefox;
}

.channel-thumbnail__default {
  width: 80%;
  height: 80%;
  margin-left: auto;
  margin-right: auto;
  align-self: flex-end;
}

.channel-thumbnail,
.channel-thumbnail__custom {
  border-radius: 50%;

  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.channel-thumbnail__default--0 {
  background-color: #748ffc;
}

.channel-thumbnail__default--1 {
  background-color: #ffa855;
}

.channel-thumbnail__default--2 {
  background-color: #339af0;
}

.channel-thumbnail__default--3 {
  background-color: #ec8383;
}

.channel-thumbnail__default--4 {
  background-color: #ccc;
}

.channel__primary-info {
  // Ensure the profile pic/title sit ontop of the default cover background
  //z-index: $metadata-z-index;
  z-index: 5;
  // Jump over the thumbnail photo because it is absolutely positioned
  // Then add normal page spacing, _then_ add the actual padding
  padding-left: calc(var(--channel-thumbnail-width) + var(--spacing-xl));
  padding-right: var(--spacing-m);
  padding-bottom: var(--spacing-m);
  margin-top: var(--spacing-xl);
  min-width: 0;
  width: 100%;

  @media (max-width: $breakpoint-small) {
    padding-left: var(--spacing-m);
    margin-top: calc(var(--channel-thumbnail-width) + var(--spacing-l));
  }
}

.channel__title {
  display: flex;
  margin-right: var(--spacing-s);
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: xx-large;
  font-weight: var(--font-weight-bold);

  // Quick hack to get this to work
  // We should have a generic style for "header with button next to it"
  .button {
    margin-left: var(--spacing-xs);
  }

  @media (max-width: $breakpoint-small) {
    padding-top: var(--spacing-xl);
  }
}

.channel__meta {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;

  .button {
    height: auto;
  }
}

.channel__quick-actions {
  display: flex;
  flex-direction: row;
  margin-left: var(--spacing-m);
  position: absolute;
  top: 0;
  right: var(--spacing-m);
  margin-top: var(--spacing-m);
  z-index: $actions-z-index;
  flex-wrap: wrap;
  font-size: var(--font-base);

  .button,
  .menu__button {
    border: 1px solid rgba(var(--color-primary-dynamic), 0.1);
  }

  > .button,
  > .button-group .button {
    padding: 0 var(--spacing-s);
  }

  > .button,
  > .button-group {
    &:not(:last-child) {
      margin-right: var(--spacing-m);
    }
  }

  .button-group .button {
    &:not(:last-child) {
      margin-right: 0;
    }
  }

  @media (max-width: $breakpoint-small) {
    flex-direction: column;

    > .button,
    > .button-group {
      margin-right: 0;
      margin-bottom: var(--spacing-xs);
      margin-left: auto;

      // Needed for specificity above
      &:not(:last-child) {
        margin-right: 0;
      }
    }

    .claim__menu-button--inline {
      .icon {
        padding: 10px;
      }
    }
  }

  .button,
  .menu__button {
    &:hover {
      color: var(--color-link);
      background-color: rgba(var(--color-header-background-base), 0.95);

      .icon {
        stroke: var(--color-link);
      }
    }
  }
}

.channel__edit-thumb {
  position: absolute;
  top: 0;
  left: var(--spacing-l);
  margin-top: calc(var(--spacing-m) * 7);
  z-index: $metadata-z-index;

  > * {
    padding: 0 var(--spacing-xs);

    &:not(:last-child) {
      margin-right: var(--spacing-m);
    }
  }

  @media (max-width: $breakpoint-small) {
    margin-top: 0;

    .button {
      margin-top: var(--spacing-xxl);
    }
  }
}

.channel-name--inline {
  margin-left: var(--spacing-xs);
}

.menu__list.channel__list {
  margin-left: 0;
  padding: 0;
  border-radius: var(--border-radius);
  background: transparent;
  max-height: 15rem;
  overflow-y: auto;

  [role='menuitem'] {
    margin: 0;

    &[data-selected] {
      // background: transparent;
      .channel__list-item,
      .channel-staked__wrapper {
        background-color: var(--color-primary);
        .claim-preview__title {
          color: var(--color-primary-contrast);
        }
      }
    }

    &:last-child {
      .channel__list-item {
        border-bottom-left-radius: var(--border-radius);
        border-bottom-right-radius: var(--border-radius);
      }
    }

    .channel__list-item {
      padding-right: calc(var(--spacing-xl) + var(--spacing-s) * 2);

      .icon__wrapper {
        background-color: var(--color-primary);
        .icon {
          stroke: var(--color-primary-contrast);
        }
      }

      &:hover {
        .icon__wrapper {
          .icon {
            stroke: var(--color-primary-contrast);
          }
        }
      }
    }
  }
}

.channel__list-item {
  display: flex;
  align-items: center;
  background-color: var(--color-header-background);
  padding: var(--spacing-s);
  overflow: hidden;

  .channel-thumbnail {
    height: 2rem;
    width: 2rem;
  }

  .icon {
    color: var(--color-menu-icon);
  }

  .icon__wrapper {
    padding: 0;
    height: 2rem;
    width: 2rem;
    margin-right: var(--spacing-m);
    border-radius: var(--border-radius);
  }

  &:hover {
    background-color: var(--color-primary);

    .channel__list-text {
      color: var(--color-menu-icon-active);
    }
  }
}

.channel__list-item--selected {
  border-radius: var(--border-radius);

  .icon--ChevronDown {
    margin-left: var(--spacing-l);
  }

  &:hover {
    .claim-preview__title {
      color: white;
    }
  }
}

.channel__list-text {
  font-weight: var(--font-weight-bold);
  color: var(--color-menu-icon);
}

.channel__selector {
  margin-bottom: var(--spacing-m);

  @media (min-width: $breakpoint-small) {
    margin-bottom: var(--spacing-l);
  }
}

.channel-staked__wrapper {
  display: flex;
  position: absolute;
  text-align: center;
  width: 116%;
  left: -8%;
  bottom: -14%;

  svg {
    overflow: visible;
    width: 100%;
    height: 100%;
  }
}

.channel-staked__wrapper--large {
  position: relative;
  background-color: transparent;
  display: inline-block;
  bottom: auto;
  left: auto;
  width: auto;
  top: var(--spacing-xs);
  margin-left: var(--spacing-s);
  padding: 0;
}

.channel-staked__wrapper--inline {
  position: relative;
  background-color: transparent;
  display: inline-block;
  bottom: auto;
  left: auto;
  top: var(--spacing-xs);
  padding: 0;
}

.channel-staked__indicator {
  //margin-left: 1px;
  z-index: 3;
  fill: var(--color-gray-3);
}

.channel-staked__indicator--controlling {
  fill: #ff853c;
}

.channel-staked__amount {
  display: inline-block;
  font-size: var(--font-xxsmall);
  margin-left: var(--spacing-s);

  .credit-amount {
    color: var(--color-gray-3);
  }
}

.channelsPage-wrapper {
  .claim-preview__wrapper--channel {
    position: relative;
    border-radius: var(--border-radius);
    background: rgba(var(--color-header-background-base), 0.6);
    padding: var(--spacing-m) !important;

    .claim__menu-button {
      right: calc(var(--spacing-m) - 8px) !important;
      margin-top: var(--spacing-xxs);

      .icon {
        stroke: var(--color-text);
      }

      &:hover {
        .icon {
          stroke: var(--color-primary);
        }
      }
    }
  }
}

